--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,22 +5,26 @@
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-     "start": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "Ned",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "config": "^3.3.7",
+    "configg": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
-    "morgan": "^1.10.0",
-    "nodemon": "^1.11.1"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.15"
   }
 }
