--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "react-scroll": "^1.8.6"
+    "axios": "^0.26.1",
+    "prop-types": "^15.8.1",
+    "react-scroll": "^1.8.6",
+    "redux": "^4.1.2"
   }
 }
