--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,12 @@
 MONGO_URL = mongodb+srv://admin:qX6Zr806HwmpnbC9@cluster0.eir0b.mongodb.net/PTCPDP?retryWrites=true&w=majority
+
+JWT_SECRET=adnkajwndjkawda12lklkdawdawdjkjawawd12knkj5656jknkjnadqfm
+
+JWT_EXPIRE=10min
+
+EMAIL_SERVICE=hotmail
+EMAIL_USERNAME=beareptcp@outlook.com
+EMAIL_PASSWORD=Giri@10000
+
+
+EMAIL_FROM=beareptcp@outlook.com
