--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "configg": "^2.1.1",
     "cors": "^2.8.5",
@@ -20,7 +21,8 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
