--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -12,6 +12,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +45,5 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   },
-  "proxy": "http://localhost/5000"
+  "proxy": "http://localhost/8002"
 }
