--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -6,13 +6,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.6.1",
+    "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
@@ -48,5 +49,5 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   },
-  "proxy": "http://localhost:8002/Backend"
+  "proxy": "http://localhost:8002"
 }
