--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.7.5"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
