--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.7.0",
+    "@syncfusion/ej2-base": "^20.1.56",
+    "@syncfusion/ej2-react-grids": "^20.1.56",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -16,9 +18,9 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "timeago.js": "^4.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
