--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -24,7 +24,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prop-types": "^15.8.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
