--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.7.0",
     "@syncfusion/ej2-base": "^20.1.57",
@@ -13,7 +15,9 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "react": "^18.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
