--- a/socket/package.json
+++ b/socket/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.16",
-    "socket.io": "^4.5.1"
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.0.1"
   }
 }
