--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -22,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.0",
     "axios": "^0.27.2",
+    "chart.js": "^2.9.3",
     "client": "^0.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -29,6 +31,8 @@
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^2.10.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
