--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -21,7 +21,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.21.0",
+    "antd": "^4.5.0",
     "axios": "^0.27.2",
     "chart.js": "^2.9.3",
     "client": "^0.0.1",
@@ -40,7 +40,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.0.1",
     "styled-components": "^5.3.5",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
