--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -13,15 +13,19 @@
     "@heroicons/react": "^1.0.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.1",
-    "@mui/material": "^5.7.0",
+    "@mui/material": "^5.8.4",
+    "@mui/x-data-grid": "^5.12.2",
     "@syncfusion/ej2-base": "^20.1.57",
     "@syncfusion/ej2-react-grids": "^20.1.57",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.21.0",
+    "agora-rtc-react": "github:AgoraIO-Community/agora-rtc-react#v1.0.1",
+    "antd": "^4.21.3",
     "axios": "^0.27.2",
+    "chart.js": "2.9.3",
     "client": "^0.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
@@ -29,6 +33,7 @@
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
