--- a/ptcpclien/package.json
+++ b/ptcpclien/package.json
@@ -21,6 +21,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "@craco/craco": "6.2.0",
+    "@heroicons/react": "1.0.3",
+    "@tailwindcss/forms": "0.3.3",
     "antd": "^4.5.0",
     "axios": "^0.27.2",
     "chart.js": "^2.9.3",
@@ -31,6 +34,10 @@
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0",
+    "leaflet": "1.7.1",
+    "react-leaflet": "3.2.0",
+    "react-table": "7.7.0",
+    "react-tailwind-table": "1.1.1",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.10.0",
     "react-date-range": "^1.4.0",
