--- a/ptcpclien/public/manifest.json
+++ b/ptcpclien/public/manifest.json
@@ -1,11 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PTCP App",
+  "name": "PTCP app pwa",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./logo192.png",
+      "sizes": "64x64 32x32 24x24 16x16 1024x1024",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
