--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
-
 {
   "dependencies": {
+    "leaflet": "^1.8.0",
     "mdbreact": "^5.2.0",
+    "react-leaflet": "^4.0.0",
+    "react-table": "^7.8.0",
     "socket.io": "^4.5.1"
   }
 }
